Implementación de pasarela de productos
Se implementa una pasarela de productos con la información del espacio por parte del gestor comercial.